# water-simulator

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  collisions.py  main.py  meshes.py  pyproject.toml  raycasting.py  requirements.txt  simulation.py  test_collisions.py  test_raycasting.py  textures.py
meshes/: __init__.py  ball.py  container.py  light.py  water.py
shaders/: basic_lighting.fs  basic_lighting.vs  container.fs  container.vs  light_cube.fs
water_simulator/: __main__.py  algebra.py  collisions.py  profilers.py  raycasting.py  simulation.py  test_raycasting.py  textures.py
water_simulator/meshes/: __init__.py  ball.py  container.py  geometry.py  light.py  water.py
water_simulator/shaders/: basic_lighting.fs  basic_lighting.vs  light_cube.fs  simple.fs
